# SpaceInvaders

./: .gitignore  game.py  pyproject.toml
src/spaceinvaders/: __main__.py  constants.py  engine.py  entities.py  game.py  high_scores.py  rendering.py
tests/: conftest.py  test_entities.py  test_game.py  test_high_scores.py  test_rendering.py
